fix: improve text contrast ratio

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,8 +18,8 @@ $color-blue-dark: #0F172A;
 $color-blue-medium: #1E293B;
 $color-blue-dark-medium: #183656;
 $color-blue-light: #475569;
-$color-blue-light-medium: #64748B;
-$color-blue-very-light: #94A3B8;
+$color-blue-light-medium: #94A3B8;
+$color-blue-very-light: #E2E8F0;
 
 /* Green shades */
 $color-teal: #4DC0C5;
